2010-09-25  Andreas K. Foerster  <info@akfoerster.de>

	* bdf2c (font): accept 0, return NULL for unknown chars
	avatar.c (avt_drawchar): accept NULL from get_font_char

2010-09-24  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_get_mb_encoding): new function

2010-09-14  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_set_mouse_pointer):
	get mouse pointer from normal XBM-data
	mpointer.xbm, mpointer_mask.xbm: new files

2010-09-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_mb_encode, avt_mb_decode): optimized

2010-09-10  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c: handle WCHAR_MAX <= 255

2010-09-09  Andreas K. Foerster  <info@akfoerster.de>

	* mingw/iconv.h, mingw/win_iconv.c: new files
	imported from win_iconv (puplic domain)

	* 9x18.bdf: updated

2010-09-06  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h (avt_quit_audio): no longer deprecated

2010-09-05  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_set_auto_margin, avt_get_auto_margin):
	new functions
	(avt_auto_margin): marked deprecated
	filechooser.c, colorchooser.c: adapted

2010-08-30  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_character, avt_tell):
	support NEL, LS, PS

2010-08-29  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_mb_encoding, avt_set_title, avt_initialize, avt_quit):
	make the title/shortname depend on avt_mb_encoding

	* avatar.c (avt_initialize):
	fix: define background_color before clearing the screen

2010-08-25  Andreas K. Foerster  <info@akfoerster.de>

	* filechooser.c (marked_line): new macro
	* colorchooser.c (marked_line): new macro

2010-08-19  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm, avt_load_image_xbm):
	handle transparency differently

	* avatar.c (avt_initialize, avt_change_avatar_image):
	don't add alpha channel to images with color-key transparency
	(optimization)
